--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,6 +11,8 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    env:
+      GO111MODULE: on
     steps:
       - name: Checkout Source
         uses: actions/checkout@v2
