--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,6 +17,6 @@ jobs:
       - name: Checkout Source
         uses: actions/checkout@v2
       - name: Run Gosec Security Scanner
-        uses: securego/gosec@master
+        uses: securego/gosec@matan
         with:
           args: ./...
